update to latest version of bootstrap

--- a/AJAX_Full_Project_GULP/views/charts.html
+++ b/AJAX_Full_Project_GULP/views/charts.html
@@ -16,7 +16,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-1"></canvas>
                 </div>
@@ -31,7 +31,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-2"></canvas>
                 </div>
@@ -46,7 +46,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-3"></canvas>
                 </div>
@@ -61,7 +61,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-4"></canvas>
                 </div>
@@ -76,7 +76,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-5"></canvas>
                 </div>
@@ -91,7 +91,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-block">
+            <div class="card-body">
                 <div class="chart-wrapper">
                     <canvas id="canvas-6"></canvas>
                 </div>
