--- a/AJAX_Full_Project_GULP/views/components/buttons.html
+++ b/AJAX_Full_Project_GULP/views/components/buttons.html
@@ -7,7 +7,7 @@
                 <div class="card-header">
                     <strong>Options</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <button type="button" class="btn btn-primary">Primary</button>
 
@@ -32,7 +32,7 @@
                 <div class="card-header">
                     <strong>With Icons</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-primary"><i class="fa fa-star"></i>&nbsp; Primary</button>
                     <button type="button" class="btn btn-secondary"><i class="fa fa-lightbulb-o"></i>&nbsp; Secondary</button>
                     <button type="button" class="btn btn-success"><i class="fa fa-magic"></i>&nbsp; Success</button>
@@ -49,7 +49,7 @@
                         <code>.btn-lg</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-primary btn-lg">Primary</button>
                     <button type="button" class="btn btn-secondary btn-lg">Secondary</button>
                     <button type="button" class="btn btn-success btn-lg">Success</button>
@@ -67,7 +67,7 @@
                         <code>.btn-sm</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-primary btn-sm">Primary</button>
                     <button type="button" class="btn btn-secondary btn-sm">Secondary</button>
                     <button type="button" class="btn btn-success btn-sm">Success</button>
@@ -85,7 +85,7 @@
                         <code>disabled="disabled"</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-primary" disabled="disabled">Primary</button>
                     <button type="button" class="btn btn-secondary" disabled="disabled">Secondary</button>
                     <button type="button" class="btn btn-success" disabled="disabled">Success</button>
@@ -103,7 +103,7 @@
                         <code>.active</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-primary active">Primary</button>
                     <button type="button" class="btn btn-secondary active">Secondary</button>
                     <button type="button" class="btn btn-success active">Success</button>
@@ -121,7 +121,7 @@
                         <code>.btn-block</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
                     <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
                     <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
@@ -141,7 +141,7 @@
                 <div class="card-header">
                     <strong>Options</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <button type="button" class="btn btn-outline-primary">Primary</button>
 
@@ -164,7 +164,7 @@
                 <div class="card-header">
                     <strong>With Icons</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-primary"><i class="fa fa-star"></i>&nbsp; Primary</button>
                     <button type="button" class="btn btn-outline-secondary"><i class="fa fa-lightbulb-o"></i>&nbsp; Secondary</button>
                     <button type="button" class="btn btn-outline-success"><i class="fa fa-magic"></i>&nbsp; Success</button>
@@ -180,7 +180,7 @@
                         <code>.btn-lg</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-primary btn-lg">Primary</button>
                     <button type="button" class="btn btn-outline-secondary btn-lg">Secondary</button>
                     <button type="button" class="btn btn-outline-success btn-lg">Success</button>
@@ -197,7 +197,7 @@
                         <code>.btn-sm</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-primary btn-sm">Primary</button>
                     <button type="button" class="btn btn-outline-secondary btn-sm">Secondary</button>
                     <button type="button" class="btn btn-outline-success btn-sm">Success</button>
@@ -214,7 +214,7 @@
                         <code>disabled="disabled"</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-primary" disabled="disabled">Primary</button>
                     <button type="button" class="btn btn-outline-secondary" disabled="disabled">Secondary</button>
                     <button type="button" class="btn btn-success" disabled="disabled">Success</button>
@@ -231,7 +231,7 @@
                         <code>.active</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-primary active">Primary</button>
                     <button type="button" class="btn btn-outline-secondary active">Secondary</button>
                     <button type="button" class="btn btn-outline-success active">Success</button>
@@ -248,7 +248,7 @@
                         <code>.btn-block</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <button type="button" class="btn btn-outline-secondary btn-lg btn-block">Block level button</button>
                     <button type="button" class="btn btn-outline-primary btn-lg btn-block">Block level button</button>
                     <button type="button" class="btn btn-outline-success btn-lg btn-block">Block level button</button>
