--- a/AJAX_Full_Project_GULP/views/components/cards.html
+++ b/AJAX_Full_Project_GULP/views/components/cards.html
@@ -5,7 +5,7 @@
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -14,7 +14,7 @@
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -27,7 +27,7 @@
                 <div class="card-header">
                     <i class="fa fa-check"></i>Card with icon
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -44,7 +44,7 @@
                         <span class="switch-handle"></span>
                     </label>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -57,7 +57,7 @@
                     Card with label
                     <span class="badge badge-success float-right">Success</span>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -70,7 +70,7 @@
                     Card with label
                     <span class="badge badge-pill badge-danger float-right">42</span>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -81,11 +81,11 @@
     <!--/.row-->
     <div class="row">
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-primary">
+            <div class="card border-primary">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -93,11 +93,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-secondary">
+            <div class="card border-secondary">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -105,11 +105,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-success">
+            <div class="card border-success">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -117,11 +117,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-info">
+            <div class="card border-info">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -129,11 +129,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-warning">
+            <div class="card border-warning">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -141,11 +141,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-outline-danger">
+            <div class="card border-danger">
                 <div class="card-header">
                     Card outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -161,7 +161,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -173,7 +173,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -185,7 +185,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -197,7 +197,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -209,7 +209,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -221,7 +221,7 @@
                 <div class="card-header">
                     Card with accent
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -232,9 +232,9 @@
     <!--/.row-->
     <div class="row">
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-primary text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-primary text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -245,9 +245,9 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-success text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-success text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -258,9 +258,9 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-info text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-info text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -271,9 +271,9 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-warning text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-warning text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -284,9 +284,9 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-danger text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-danger text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -297,9 +297,9 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-primary text-center">
-                <div class="card-block">
-                    <blockquote class="card-blockquote">
+            <div class="card text-white bg-primary text-center">
+                <div class="card-body">
+                    <blockquote class="card-bodyquote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                         <footer>Someone famous in
                             <cite title="Source Title">Source Title</cite>
@@ -313,11 +313,11 @@
     <!--/.row-->
     <div class="row">
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-primary">
+            <div class="card text-white bg-primary">
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -325,11 +325,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-success">
+            <div class="card text-white bg-success">
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -337,11 +337,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-info">
+            <div class="card text-white bg-info">
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -349,11 +349,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-warning">
+            <div class="card text-white bg-warning">
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
@@ -361,11 +361,11 @@
         </div>
         <!--/.col-->
         <div class="col-sm-6 col-md-4">
-            <div class="card card-inverse card-danger">
+            <div class="card text-white bg-danger">
                 <div class="card-header">
                     Card title
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
                     ea commodo consequat.
                 </div>
