--- a/AJAX_Full_Project_GULP/views/components/forms.html
+++ b/AJAX_Full_Project_GULP/views/components/forms.html
@@ -6,7 +6,7 @@
                     <strong>Credit Card</strong>
                     <small>Form</small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <div class="row">
 
                         <div class="col-sm-12">
@@ -97,7 +97,7 @@
                     <strong>Company</strong>
                     <small>Form</small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <div class="form-group">
                         <label for="company">Company</label>
                         <input type="text" class="form-control" id="company" placeholder="Enter your company name">
@@ -147,7 +147,7 @@
                 <div class="card-header">
                     <strong>Basic Form</strong>Elements
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
                         <div class="form-group row">
                             <label class="col-md-3 form-control-label">Static</label>
@@ -341,7 +341,7 @@
                 <div class="card-header">
                     <strong>Inline</strong>Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-inline">
                         <div class="form-group">
                             <label for="exampleInputName2">Name</label>
@@ -364,7 +364,7 @@
                 <div class="card-header">
                     <strong>Horizontal</strong>Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <label class="col-md-3 form-control-label" for="hf-email">Email</label>
@@ -391,7 +391,7 @@
                 <div class="card-header">
                     <strong>Normal</strong>Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post">
                         <div class="form-group">
                             <label for="nf-email">Email</label>
@@ -417,7 +417,7 @@
                     Input
                     <strong>Grid</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
 
                         <div class="form-group row">
@@ -483,7 +483,7 @@
                     Input
                     <strong>Sizes</strong>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <label class="col-sm-5 form-control-label" for="input-small">Small Input</label>
@@ -521,18 +521,17 @@
                 <div class="card-header">
                     <strong>Validation states</strong>Form
                 </div>
-                <div class="card-block">
-                    <div class="form-group has-success">
+                <div class="card-body">
+                    <div class="form-group">
                         <label class="form-form-control-label" for="inputSuccess1">Input with success</label>
-                        <input type="text" class="form-control" id="inputSuccess1">
+                        <input type="text" class="form-control is-valid" id="inputSuccess1">
                     </div>
-                    <div class="form-group has-warning">
-                        <label class="form-form-control-label" for="inputWarning1">Input with warning</label>
-                        <input type="text" class="form-control" id="inputWarning1">
-                    </div>
-                    <div class="form-group has-danger">
+                    <div class="form-group">
                         <label class="form-form-control-label" for="inputError1">Input with error</label>
-                        <input type="text" class="form-control" id="inputError1">
+                        <input type="text" class="form-control is-invalid" id="inputError1">
+                        <div class="invalid-feedback">
+                            Please provide a valid informations.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -543,18 +542,17 @@
                 <div class="card-header">
                     <strong>Validation states</strong>with optional icons
                 </div>
-                <div class="card-block">
-                    <div class="form-group has-success">
+                <div class="card-body">
+                    <div class="form-group">
                         <label class="form-form-control-label" for="inputSuccess2">Input with success</label>
-                        <input type="text" class="form-control form-control-success" id="inputSuccess2">
+                        <input type="text" class="form-control is-valid" id="inputSuccess2">
                     </div>
-                    <div class="form-group has-warning">
-                        <label class="form-form-control-label" for="inputWarning2">Input with warning</label>
-                        <input type="text" class="form-control form-control-warning" id="inputWarning2">
-                    </div>
-                    <div class="form-group has-danger has-feedback">
+                    <div class="form-group">
                         <label class="form-form-control-label" for="inputError2">Input with error</label>
-                        <input type="text" class="form-control form-control-danger" id="inputError2">
+                        <input type="text" class="form-control is-invalid" id="inputError2">
+                        <div class="invalid-feedback">
+                            Please provide a valid informations.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -567,7 +565,7 @@
                 <div class="card-header">
                     <strong>Icon/Text</strong>Groups
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <div class="col-md-12">
@@ -610,7 +608,7 @@
                 <div class="card-header">
                     <strong>Buttons</strong>Groups
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <div class="col-md-12">
@@ -660,7 +658,7 @@
                 <div class="card-header">
                     <strong>Dropdowns</strong>Groups
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <div class="col-md-12">
@@ -752,7 +750,7 @@
                         <code>.col-sm-*</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <div class="col-md-8">
@@ -813,7 +811,7 @@
                         <code>.col-*</code>
                     </small>
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post" class="form-horizontal">
                         <div class="form-group row">
                             <div class="col-4">
@@ -873,7 +871,7 @@
                 <div class="card-header">
                     Example Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post">
                         <div class="form-group">
                             <div class="input-group">
@@ -911,7 +909,7 @@
                 <div class="card-header">
                     Example Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post">
                         <div class="form-group">
                             <div class="input-group">
@@ -935,7 +933,7 @@
                             </div>
                         </div>
                         <div class="form-group form-actions">
-                            <button type="submit" class="btn btn-sm btn-default">Submit</button>
+                            <button type="submit" class="btn btn-sm btn-secondary">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -946,7 +944,7 @@
                 <div class="card-header">
                     Example Form
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <form action="" method="post">
                         <div class="form-group">
                             <div class="input-group">
@@ -990,8 +988,8 @@
                         <a href="#" class="btn-close"><i class="icon-close"></i></a>
                     </div>
                 </div>
-                <div class="card-block">
-                    <form class="form-2orizontal">
+                <div class="card-body">
+                    <form class="form-horizontal">
                         <div class="form-group">
                             <label class="form-control-label" for="prependedInput">Prepended text</label>
                             <div class="controls">
@@ -1028,7 +1026,7 @@
                                 <div class="input-group">
                                     <input id="appendedInputButton" class="form-control" size="16" type="text">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">Go!</button>
+                                        <button class="btn btn-secondary" type="button">Go!</button>
                                     </span>
                                 </div>
                             </div>
@@ -1039,15 +1037,15 @@
                                 <div class="input-group">
                                     <input id="appendedInputButtons" size="16" class="form-control" type="text">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">Search</button>
-                                        <button class="btn btn-default" type="button">Options</button>
+                                        <button class="btn btn-secondary" type="button">Search</button>
+                                        <button class="btn btn-secondary" type="button">Options</button>
                                     </span>
                                 </div>
                             </div>
                         </div>
                         <div class="form-actions">
                             <button type="submit" class="btn btn-primary">Save changes</button>
-                            <button type="button" class="btn btn-default">Cancel</button>
+                            <button type="button" class="btn btn-secondary">Cancel</button>
                         </div>
                     </form>
                 </div>
