--- a/AJAX_Full_Project_GULP/views/components/switches.html
+++ b/AJAX_Full_Project_GULP/views/components/switches.html
@@ -6,7 +6,7 @@
                 <div class="card-header">
                     3d Switch
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-3d switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -52,7 +52,7 @@
                 <div class="card-header">
                     Switch default
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -98,7 +98,7 @@
                 <div class="card-header">
                     Switch default - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-pill switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -144,7 +144,7 @@
                 <div class="card-header">
                     Switch outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -190,7 +190,7 @@
                 <div class="card-header">
                     Switch outline - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-pill switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -236,7 +236,7 @@
                 <div class="card-header">
                     Switch outline alternative
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -282,7 +282,7 @@
                 <div class="card-header">
                     Switch outline alternative - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-default switch-pill switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label"></span>
@@ -328,7 +328,7 @@
                 <div class="card-header">
                     Switch with text
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-text switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="On" data-off="Off"></span>
@@ -374,7 +374,7 @@
                 <div class="card-header">
                     Switch with text - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-text switch-pill switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="On" data-off="Off"></span>
@@ -420,7 +420,7 @@
                 <div class="card-header">
                     Switch with text outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
 
                     <label class="switch switch-text switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
@@ -467,7 +467,7 @@
                 <div class="card-header">
                     Switch with text outline - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
 
                     <label class="switch switch-text switch-pill switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
@@ -514,7 +514,7 @@
                 <div class="card-header">
                     Switch with text outline alternative
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-text switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="On" data-off="Off"></span>
@@ -560,7 +560,7 @@
                 <div class="card-header">
                     Switch with text outline alternative - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-text switch-pill switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="On" data-off="Off"></span>
@@ -606,7 +606,7 @@
                 <div class="card-header">
                     Switch with icon
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -652,7 +652,7 @@
                 <div class="card-header">
                     Switch with icon - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-pill switch-primary">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -698,7 +698,7 @@
                 <div class="card-header">
                     Switch with icon outline
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -744,7 +744,7 @@
                 <div class="card-header">
                     Switch with icon outline - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-pill switch-primary-outline">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -790,7 +790,7 @@
                 <div class="card-header">
                     Switch with icon outline alternative
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -836,7 +836,7 @@
                 <div class="card-header">
                     Switch with icon outline alternative - pills
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <label class="switch switch-icon switch-pill switch-primary-outline-alt">
                         <input type="checkbox" class="switch-input" checked>
                         <span class="switch-label" data-on="&#xf00c" data-off="&#xf00d"></span>
@@ -882,7 +882,7 @@
                 <div class="card-header">
                     Sizes
                 </div>
-                <div class="card-block p-0">
+                <div class="card-body p-0">
                     <table class="table table-hover table-striped table-align-middle mb-0">
                         <thead>
                             <th>Size</th>
