--- a/AJAX_Full_Project_GULP/views/components/tables.html
+++ b/AJAX_Full_Project_GULP/views/components/tables.html
@@ -5,7 +5,7 @@
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i> Simple Table
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <table class="table">
                         <thead>
                             <tr>
@@ -83,7 +83,7 @@
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i> Striped Table
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -165,7 +165,7 @@
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i> Condensed Table
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <table class="table table-sm">
                         <thead>
                             <tr>
@@ -243,7 +243,7 @@
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i> Bordered Table
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
@@ -325,7 +325,7 @@
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i> Combined All Table
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <table class="table table-bordered table-striped table-sm">
                         <thead>
                             <tr>
