--- a/AJAX_Full_Project_GULP/views/icons/simple-line-icons.html
+++ b/AJAX_Full_Project_GULP/views/icons/simple-line-icons.html
@@ -3,7 +3,7 @@
         <div class="card-header">
             <i class="fa fa-picture-o"></i> Simple Line Icons
         </div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3">
