--- a/AJAX_Full_Project_GULP/views/pages/login.html
+++ b/AJAX_Full_Project_GULP/views/pages/login.html
@@ -28,7 +28,7 @@
             <div class="col-md-8">
                 <div class="card-group mb-0">
                     <div class="card p-4">
-                        <div class="card-block">
+                        <div class="card-body">
                             <h1>Login</h1>
                             <p class="text-muted">Sign In to your account</p>
                             <div class="input-group mb-3">
@@ -51,8 +51,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card card-inverse card-primary py-5 d-md-down-none" style="width:44%">
-                        <div class="card-block text-center">
+                    <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+                        <div class="card-body text-center">
                             <div>
                                 <h2>Sign up</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
