--- a/AJAX_Full_Project_GULP/views/icons/font-awesome.html
+++ b/AJAX_Full_Project_GULP/views/icons/font-awesome.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
     <div class="card" id="new">
         <div class="card-header">20 New Icons in 4.5</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -111,7 +111,7 @@
 
     <div class="card" id="web-application">
         <div class="card-header">Web Application Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2139,7 +2139,7 @@
 
     <div class="card" id="hand">
         <div class="card-header">Hand Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2236,7 +2236,7 @@
 
     <div class="card" id="transportation">
         <div class="card-header">Transportation Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2332,7 +2332,7 @@
 
     <div class="card" id="gender">
         <div class="card-header">Gender Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2412,7 +2412,7 @@
 
     <div class="card" id="file-type">
         <div class="card-header">File Type Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2516,7 +2516,7 @@
 
     <div class="card" id="spinner">
         <div class="card-header">Spinner Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="alert alert-success">
                 <ul class="fa-ul">
                     <li>
@@ -2560,7 +2560,7 @@
 
     <div class="card" id="form-control">
         <div class="card-header">Form Control Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2624,7 +2624,7 @@
 
     <div class="card" id="payment">
         <div class="card-header">Payment Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2693,7 +2693,7 @@
 
     <div class="card" id="chart">
         <div class="card-header">Chart Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2728,7 +2728,7 @@
 
     <div class="card" id="currency">
         <div class="card-header">Currency Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2880,7 +2880,7 @@
 
     <div class="card" id="text-editor">
         <div class="card-header">Text Editor Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3143,7 +3143,7 @@
 
     <div class="card" id="directional">
         <div class="card-header">Directional Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3421,7 +3421,7 @@
 
     <div class="card" id="video-player">
         <div class="card-header">Video Player Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3535,7 +3535,7 @@
 
     <div class="card" id="brand">
         <div class="card-header">Brand Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="alert alert-warning">
                 <h4><i class="fa fa-warning"></i> Warning!</h4>
                 Apparently, Adblock Plus can remove Font Awesome brand icons with their "Remove Social Media Buttons" setting. We will not use hacks to force them to display. Please
@@ -4344,7 +4344,7 @@
 
     <div class="card" id="medical">
         <div class="card-header">Medical Icons</div>
-        <div class="card-block">
+        <div class="card-body">
             <div class="row text-center">
 
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
