--- a/AJAX_Full_Project_GULP/views/main.html
+++ b/AJAX_Full_Project_GULP/views/main.html
@@ -9,10 +9,10 @@
 <div class="animated fadeIn">
     <div class="row">
         <div class="col-sm-6 col-lg-3">
-            <div class="card card-inverse card-primary">
-                <div class="card-block pb-0">
+            <div class="card text-white bg-primary">
+                <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                        <button type="button" class="btn btn-transparent active dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button type="button" class="btn btn-transparent dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="icon-settings"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
@@ -32,9 +32,9 @@
         <!--/.col-->
 
         <div class="col-sm-6 col-lg-3">
-            <div class="card card-inverse card-info">
-                <div class="card-block pb-0">
-                    <button type="button" class="btn btn-transparent active p-0 float-right">
+            <div class="card text-white bg-info">
+                <div class="card-body pb-0">
+                    <button type="button" class="btn btn-transparent p-0 float-right">
                         <i class="icon-location-pin"></i>
                     </button>
                     <h4 class="mb-0">9.823</h4>
@@ -48,10 +48,10 @@
         <!--/.col-->
 
         <div class="col-sm-6 col-lg-3">
-            <div class="card card-inverse card-warning">
-                <div class="card-block pb-0">
+            <div class="card text-white bg-warning">
+                <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                        <button type="button" class="btn btn-transparent active dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button type="button" class="btn btn-transparent dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="icon-settings"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
@@ -71,10 +71,10 @@
         <!--/.col-->
 
         <div class="col-sm-6 col-lg-3">
-            <div class="card card-inverse card-danger">
-                <div class="card-block pb-0">
+            <div class="card text-white bg-danger">
+                <div class="card-body pb-0">
                     <div class="btn-group float-right">
-                        <button type="button" class="btn btn-transparent active dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button type="button" class="btn btn-transparent dropdown-toggle p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="icon-settings"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
@@ -96,7 +96,7 @@
     <!--/.row-->
 
     <div class="card">
-        <div class="card-block">
+        <div class="card-body">
             <div class="row">
                 <div class="col-sm-5">
                     <h4 class="card-title mb-0">Traffic</h4>
@@ -263,7 +263,7 @@
                 <div class="card-header">
                     Traffic &amp; Sales
                 </div>
-                <div class="card-block">
+                <div class="card-body">
                     <div class="row">
                         <div class="col-sm-12 col-lg-4">
                             <div class="row">
